--- a/public/styles/_questions.scss
+++ b/public/styles/_questions.scss
@@ -2,7 +2,7 @@
 @use "themeprovider/mixins" as mixin;
 
 .questions-section {
-  margin-bottom: 9.5em;
+  padding-bottom: 9.5em;
   scroll-margin: 5em;
 
   h1 {
