--- a/public/styles/_skills.scss
+++ b/public/styles/_skills.scss
@@ -2,7 +2,7 @@
 @use "themeprovider/mixins" as mixin;
 
 .skills-section {
-  margin-bottom: 7em;
+  padding-bottom: 7em;
   scroll-margin: 5em;
 
   h1 {
