--- a/public/style.css
+++ b/public/style.css
@@ -106,9 +106,11 @@
   width: 50%;
   transform: translate(30px, -11px) rotatez(45deg);
 }
-.desktop-navbar div:first-child h1 {
+.desktop-navbar div:first-child a {
+  text-decoration: none;
   font-family: "Poppins", sans-serif;
   font-size: 2.2rem;
+  font-weight: 700;
   cursor: pointer;
   color: #ffffff;
   user-select: none;
@@ -116,7 +118,8 @@
 .desktop-navbar div:nth-child(2) {
   display: none;
 }
-.desktop-navbar div:nth-child(2) p {
+.desktop-navbar div:nth-child(2) a {
+  text-decoration: none;
   font-family: "Poppins", sans-serif;
   color: #ffffff;
   font-size: 1.1rem;
@@ -124,10 +127,10 @@
   transition: color 0.6s ease-in-out;
   cursor: pointer;
 }
-.desktop-navbar div:nth-child(2) p:hover {
+.desktop-navbar div:nth-child(2) a:hover {
   color: #66d9ed;
 }
-.desktop-navbar div:nth-child(2) p::after {
+.desktop-navbar div:nth-child(2) a::after {
   content: "";
   background: #66d9ed;
   position: relative;
@@ -137,7 +140,7 @@
   height: 0.23em;
   transition: width 0.6s ease-in-out;
 }
-.desktop-navbar div:nth-child(2) p:hover::after {
+.desktop-navbar div:nth-child(2) a:hover::after {
   width: 100%;
 }
 
@@ -160,12 +163,14 @@
   }
 }
 .mobile-navbar {
-  transform: translateY(-150vh);
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: calc(100vh - 4em);
-  overflow-y: auto;
   background: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(20px);
+  transform: translateY(-150vh);
+  overflow-y: auto;
   text-align: center;
   line-height: 5em;
   position: fixed;
@@ -173,7 +178,8 @@
   box-shadow: 5px 10px 20px 1px rgba(0, 0, 0, 0.3);
   transition: transform 0.8s ease-in-out;
 }
-.mobile-navbar p {
+.mobile-navbar a {
+  text-decoration: none;
   color: #ffffff;
   font-family: "Poppins", sans-serif;
   font-size: 1.4rem;
@@ -183,7 +189,7 @@
   user-select: none;
   transition: background 0.25s ease;
 }
-.mobile-navbar p:hover {
+.mobile-navbar a:hover {
   background: #c22085;
 }
 
