--- a/public/styles/_projects.scss
+++ b/public/styles/_projects.scss
@@ -2,7 +2,8 @@
 @use "themeprovider/mixins" as mixin;
 
 .projects-section {
-  padding-bottom: 7em;
+  padding-top: 7em;
+  padding-bottom: 8em;
   scroll-margin: 5em;
 
   h1 {
