--- a/public/styles/themeprovider/_color.scss
+++ b/public/styles/themeprovider/_color.scss
@@ -1,4 +1,6 @@
 $pink-color: #c22085;
+$red-color: #E50914;
+$green-color: #00B14F;
 $white-color: #ffffff;
 $white-color-hover: hsl(0, 0%, 80%);
 $black-color: #000000;
