--- a/public/style.css
+++ b/public/style.css
@@ -679,6 +679,54 @@
   font-size: 2.2rem;
   line-height: 1.2em;
 }
+.contacts-section .error-list {
+  margin-top: 1.3em;
+  width: 100%;
+}
+.contacts-section .error-list .errors {
+  width: min(27em, 100%);
+  margin: 0 auto;
+}
+.contacts-section .error-list .errors ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+.contacts-section .error-list .errors ul li {
+  background: #E50914;
+  color: #ffffff;
+  border-radius: 10px;
+  padding: 0.6em 1em;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 500;
+}
+.contacts-section .message-sent-success {
+  width: min(27em, 100%);
+  margin: 1.3em auto 0em auto;
+  background: #00B14F;
+  color: #ffffff;
+  border-radius: 10px;
+  padding: 0.6em 1em;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 500;
+}
+.contacts-section .message-sent-error {
+  width: min(27em, 100%);
+  margin: 1.3em auto 0em auto;
+  background: #E50914;
+  color: #ffffff;
+  border-radius: 10px;
+  padding: 0.6em 1em;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 500;
+}
 .contacts-section .contact-form {
   display: flex;
   flex-direction: column;
