Added loading state on submit button when submitting form

--- a/public/styles/_contacts.scss
+++ b/public/styles/_contacts.scss
@@ -134,6 +134,11 @@
       &:hover {
         background: color.$blue-color-hover;
       }
+
+      &:disabled {
+        background: color.$light-black-color;
+        cursor: not-allowed;
+      }
     }
   }
 
