--- a/public/style.css
+++ b/public/style.css
@@ -785,6 +785,10 @@
 .contacts-section .contact-form button:hover {
   background: hsl(235, 55%, 58%);
 }
+.contacts-section .contact-form button:disabled {
+  background: hsl(0, 0%, 23%);
+  cursor: not-allowed;
+}
 .contacts-section .contact-links {
   display: flex;
   align-items: center;
