--- a/public/style.css
+++ b/public/style.css
@@ -291,7 +291,7 @@
   align-items: center;
   justify-content: center;
   gap: 2em;
-  padding: 8.5em 2em 8em 2em;
+  padding: 8.5em 2em 7em 2em;
   scroll-margin: 5em;
 }
 .about-section .profile-picture {
@@ -346,7 +346,7 @@
   .about-section {
     flex-direction: row;
     gap: 4em;
-    padding: 7em 2em 8em 2em;
+    padding: 7em 2em;
   }
   .about-section .about-content p {
     text-align: left;
@@ -523,7 +523,6 @@
   }
 }
 .interests-section {
-  padding-top: 7em;
   padding-bottom: 7em;
   scroll-margin: 5em;
 }
@@ -586,7 +585,6 @@
 }
 
 .questions-section {
-  padding-top: 7em;
   padding-bottom: 8em;
   scroll-margin: 5em;
 }
