--- a/public/styles/_contacts.scss
+++ b/public/styles/_contacts.scss
@@ -163,3 +163,9 @@
     padding: 8.5em 2em;
   }
 }
+
+.user-table-content {
+  width: min(65em, 90%);
+  padding-bottom: 7em;
+  margin: 0 auto;
+}
