--- a/public/styles/themeprovider/_color.scss
+++ b/public/styles/themeprovider/_color.scss
@@ -3,6 +3,7 @@ $red-color: #E50914;
 $green-color: #00B14F;
 $white-color: #ffffff;
 $white-color-hover: hsl(0, 0%, 80%);
+$gray-color: #090808;
 $black-color: #000000;
 $black-color-semi-transparent: rgba(0, 0, 0, 0.5);
 $light-black-color: hsl(0, 0%, 23%);
