--- a/public/styles/_contacts.scss
+++ b/public/styles/_contacts.scss
@@ -10,6 +10,8 @@
   .contact-info {
     h1 {
       font-family: "Poppins", sans-serif;
+      color: color.$white-color;
+      font-weight: 700;
       text-align: center;
       font-size: 2.2rem;
       line-height: 1.2em;
@@ -77,6 +79,7 @@
 
     label {
       font-family: "Poppins", sans-serif;
+      color: color.$white-color;
       font-weight: 500;
       font-size: 1.1rem;
       margin-top: 1em;
@@ -123,6 +126,7 @@
       font-size: 0.9rem;
       font-weight: 600;
       background: color.$blue-color;
+      color: color.$white-color;
       border: none;
       align-self: start;
       margin-top: 2em;
@@ -137,6 +141,7 @@
 
       &:disabled {
         background: color.$light-black-color;
+        color: color.$gray-color;
         cursor: not-allowed;
       }
     }
