--- a/public/style.css
+++ b/public/style.css
@@ -418,6 +418,95 @@
   transform: translateY(0em);
 }
 
+.login-content {
+  padding: 7.5em 1.3em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.login-content .login-text h1 {
+  font-family: "Poppins", sans-serif;
+  color: #ffffff;
+  font-weight: 700;
+  text-align: center;
+  font-size: 2.2rem;
+  line-height: 1.2em;
+}
+.login-content .login-form {
+  display: flex;
+  flex-direction: column;
+  width: min(27em, 100%);
+}
+.login-content .login-form .login-success {
+  width: min(27em, 100%);
+  margin: 1.3em auto 0em auto;
+  background: #00B14F;
+  color: #ffffff;
+  border-radius: 10px;
+  padding: 0.6em 1em;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 500;
+}
+.login-content .login-form .login-error {
+  width: min(27em, 100%);
+  margin: 1.3em auto 0em auto;
+  background: #E50914;
+  color: #ffffff;
+  border-radius: 10px;
+  padding: 0.6em 1em;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 500;
+}
+.login-content .login-form label {
+  font-family: "Poppins", sans-serif;
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 1.1rem;
+  margin-top: 1em;
+}
+.login-content .login-form label:first-of-type {
+  margin-top: 1.5em;
+}
+.login-content .login-form input {
+  font-family: "Poppins", sans-serif;
+  background: hsl(0, 0%, 23%);
+  border: none;
+  padding: 0.8em 1em;
+  font-size: 1rem;
+  font-weight: 500;
+  border-radius: 10px;
+  margin-top: 0.5em;
+}
+.login-content .login-form input:focus {
+  outline: none;
+}
+.login-content .login-form button {
+  font-family: "Poppins", sans-serif;
+  font-size: 0.9rem;
+  font-weight: 600;
+  background: #3945c6;
+  color: #ffffff;
+  border: none;
+  align-self: start;
+  margin-top: 2em;
+  border-radius: 10px;
+  padding: 1em;
+  cursor: pointer;
+  transition: background 0.3s ease-in-out;
+}
+.login-content .login-form button:hover {
+  background: hsl(235, 55%, 58%);
+}
+.login-content .login-form button:disabled {
+  background: hsl(0, 0%, 23%);
+  color: #090808;
+  cursor: not-allowed;
+}
+
 .projects-section {
   padding-top: 7em;
   padding-bottom: 8em;
