--- a/public/styles/themeprovider/_color.scss
+++ b/public/styles/themeprovider/_color.scss
@@ -1,5 +1,6 @@
 $pink-color: #c22085;
 $red-color: #E50914;
+$red-color-hover: hsl(357, 92%, 55%);
 $green-color: #00B14F;
 $white-color: #ffffff;
 $white-color-hover: hsl(0, 0%, 80%);
@@ -11,3 +12,4 @@ $blue-color: #3945c6;
 $blue-color-hover: hsl(235, 55%, 58%);
 $sky-blue-color: #66d9ed;
 $purple-color: #923fe6;
+$purple-color-hover: hsl(270, 77%, 70%);
