--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -5,6 +5,7 @@
 @use "about";
 @use "skills";
 @use "blog/blog";
+@use "blog/adminheader";
 @use "blog/login";
 @use "blog/dashboard";
 @use "projects";
