--- a/public/style.css
+++ b/public/style.css
@@ -418,6 +418,24 @@
   transform: translateY(0em);
 }
 
+.admin-header {
+  padding-top: 7em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5em;
+}
+.admin-header a {
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  color: #ffffff;
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+.admin-header a:hover {
+  text-decoration: underline;
+}
+
 .login-content {
   padding: 7.5em 1.3em;
   display: flex;
@@ -508,7 +526,7 @@
 }
 
 .blog-dashboard {
-  padding-top: 7em;
+  padding-top: 1.1em;
   padding-bottom: 7em;
   display: flex;
   flex-direction: column;
@@ -562,6 +580,7 @@
 }
 .blog-dashboard .blog-posts li p {
   font-family: "Poppins", sans-serif;
+  color: #ffffff;
 }
 .blog-dashboard .blog-posts li p:first-of-type {
   font-size: 1.5rem;
