--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -6,6 +6,7 @@
 @use "skills";
 @use "blog/blog";
 @use "blog/adminheader";
+@use "blog/admincontacts";
 @use "blog/login";
 @use "blog/dashboard";
 @use "projects";
