Added update blog functionality

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -6,6 +6,7 @@
 @use "skills";
 @use "blog/blog";
 @use "blog/createblog";
+@use "blog/editblog";
 @use "blog/adminheader";
 @use "blog/admincontacts";
 @use "blog/login";
