Added styling on blog page

--- a/public/style.css
+++ b/public/style.css
@@ -418,6 +418,40 @@
   transform: translateY(0em);
 }
 
+.blog-page-content {
+  padding-top: 1.1em;
+  padding-bottom: 7em;
+  width: min(50em, 85%);
+  margin: 0 auto;
+}
+.blog-page-content .image-wrapper {
+  width: 100%;
+  height: 15em;
+  margin-top: 1em;
+}
+.blog-page-content .image-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.blog-page-content h1 {
+  font-family: "Poppins", sans-serif;
+}
+.blog-page-content h1:first-of-type {
+  font-weight: 700;
+  margin-top: 0.8em;
+  font-size: 2.2rem;
+}
+.blog-page-content h1:last-of-type {
+  font-weight: 500;
+  font-size: 1.3rem;
+  margin-top: 0.3em;
+}
+.blog-page-content p {
+  font-family: "Poppins", sans-serif;
+  margin-top: 2.3em;
+}
+
 .create-blog {
   padding-top: 1.1em;
   padding-bottom: 7em;
